crates/ruff_python_formatter/tests/snapshots/format@parentheses__nested.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/parentheses/nested.py
---
## Input
```python
a1 = f(  # 1
    g(  # 2
    )
)
a2 = f(  # 1
    g(  # 2
        x
    )
)
a3 = f(
    (
        #
        ()
    )
)


call(
  a,
  b,
  [  # Empty because of
  ]
)

a = a + b + c + d + ( # Hello
    e + f + g
)

a = int(  # type: ignore
    int(  # type: ignore
        int(  # type: ignore
            6
        )
    )
)

# Stability and correctness checks
b1 = () - (  #
)
() - (  #
)
b2 = () - f(  #
)
() - f(  #
)
b3 = (
    #
    ()
)
(
    #
    ()
)
```

## Output
```python
a1 = f(  # 1
    g(  # 2
    )
)
a2 = f(  # 1
    g(  # 2
        x
    )
)
a3 = f(
    (
        #
    )
)


call(
    a,
    b,
    [  # Empty because of
    ],
)

a = (
    a
    + b
    + c
    + d
    + (  # Hello
        e + f + g
    )
)

a = int(  # type: ignore
    int(  # type: ignore
        int(  # type: ignore
            6
        )
    )
)

# Stability and correctness checks
b1 = (
    ()
    - (  #
    )
)
(
    ()
    - (  #
    )
)
b2 = (
    ()
    - f(  #
    )
)
(
    ()
    - f(  #
    )
)
b3 = (
    #
)
(
    #
)
```


## Preview changes
```diff
--- Stable
+++ Preview
@@ -7,11 +7,9 @@
         x
     )
 )
-a3 = f(
-    (
-        #
-    )
-)
+a3 = f((
+    #
+))
 
 
 call(
```



